crates/test-files/fixtures/compile_errors/_test_fn_params.fe
trait MyTrait { }

#test
fn test1<T: MyTrait>() { }

#test
fn test2(x: u256) { }